--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,14 @@ DB_LOGGING=
 DB_SYNCHRONIZE=
 
 # Security
+ALLOWED_HEADERS=
+ALLOWED_DOMAINS=
+JWT_SUBJECT=
+COOKIE_SECRET=
+JWT_ACCESS_TOKEN_SECRET=
+JWT_REFRESH_TOKEN_SECRET=
+JWT_ACCESS_TOKEN_EXPIRES_IN=
+JWT_REFRESH_TOKEN_EXPIRES_IN=
 
 # OAuth
 
