--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^7.6.15",
     "@nestjs/config": "^1.1.0",
     "@nestjs/core": "^7.6.15",
+    "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/typeorm": "^8.0.2",
@@ -31,12 +32,16 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
+    "helmet": "^6.0.0",
     "joi": "^17.4.2",
     "mongodb": "^3.7.0",
     "passport": "^0.5.0",
     "passport-facebook": "^3.0.0",
     "passport-github": "^1.1.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -54,6 +59,7 @@
     "@types/node": "^14.14.36",
     "@types/passport-github": "^1.1.6",
     "@types/passport-google-oauth20": "^2.0.11",
+    "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
