--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,13 @@ JWT_REFRESH_TOKEN_SECRET=
 JWT_ACCESS_TOKEN_EXPIRES_IN=
 JWT_REFRESH_TOKEN_EXPIRES_IN=
 
+# Email
+EMAIL_USER=
+EMAIL_PASSWORD=
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_FROM=
+
 # OAuth
 
 ## Facebook
