--- a/package.json
+++ b/package.json
@@ -31,13 +31,16 @@
     "@nestjs/typeorm": "^8.0.2",
     "@types/passport-facebook": "^2.1.11",
     "bcrypt": "^5.0.1",
+    "chance": "^1.1.9",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "helmet": "^6.0.0",
     "joi": "^17.4.2",
+    "lodash.merge": "^4.6.2",
     "mongodb": "^3.7.0",
+    "nodemailer": "^6.8.0",
     "passport": "^0.5.0",
     "passport-facebook": "^3.0.0",
     "passport-github": "^1.1.0",
@@ -47,22 +50,27 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
-    "typeorm": "^0.2.38"
+    "typeorm": "^0.2.38",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
     "@types/bcrypt": "^5.0.0",
+    "@types/chance": "^1.1.3",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/joi": "^17.2.3",
+    "@types/lodash.merge": "^4.6.7",
     "@types/node": "^14.14.36",
+    "@types/nodemailer": "^6.4.6",
     "@types/passport-github": "^1.1.6",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.10",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.22.0",
