--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,10 @@ JWT_ACCESS_TOKEN_SECRET=
 JWT_REFRESH_TOKEN_SECRET=
 JWT_ACCESS_TOKEN_EXPIRES_IN=
 JWT_REFRESH_TOKEN_EXPIRES_IN=
+S3_ACCESS_KEY_ID=
+S3_SECRET_ACCESS_KEY=
+S3_BUCKET_NAME=
+S3_BUCKET_FOLDER=
 
 # Email
 EMAIL_USER=
