--- a/package.json
+++ b/package.json
@@ -30,16 +30,19 @@
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/typeorm": "^8.0.2",
     "@types/passport-facebook": "^2.1.11",
+    "aws-sdk": "^2.1249.0",
     "bcrypt": "^5.0.1",
     "chance": "^1.1.9",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
+    "file-type": "^16.5.3",
     "helmet": "^6.0.0",
     "joi": "^17.4.2",
     "lodash.merge": "^4.6.2",
     "mongodb": "^3.7.0",
+    "nestjs-s3": "^1.0.1",
     "nodemailer": "^6.8.0",
     "passport": "^0.5.0",
     "passport-facebook": "^3.0.0",
@@ -73,6 +76,7 @@
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
+    "builtin-modules": "^3.3.0",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
