--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"src/**/*.ts\"",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -21,14 +21,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.6.15",
-    "@nestjs/config": "^1.1.0",
-    "@nestjs/core": "^7.6.15",
+    "@nestjs/axios": "^1.0.0",
+    "@nestjs/common": "^9.2.0",
+    "@nestjs/config": "^2.2.0",
+    "@nestjs/core": "^9.2.0",
     "@nestjs/jwt": "^9.0.0",
-    "@nestjs/mapped-types": "*",
-    "@nestjs/passport": "^8.0.1",
-    "@nestjs/platform-express": "^7.6.15",
-    "@nestjs/typeorm": "^8.0.2",
+    "@nestjs/mapped-types": "^1.2.0",
+    "@nestjs/passport": "^9.0.0",
+    "@nestjs/platform-express": "^9.2.0",
+    "@nestjs/typeorm": "^9.0.1",
     "@types/passport-facebook": "^2.1.11",
     "aws-sdk": "^2.1249.0",
     "bcrypt": "^5.0.1",
@@ -37,7 +38,6 @@
     "class-validator": "^0.13.1",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
-    "file-type": "^16.5.3",
     "helmet": "^6.0.0",
     "joi": "^17.4.2",
     "lodash.merge": "^4.6.2",
@@ -53,7 +53,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
-    "typeorm": "^0.2.38",
+    "typeorm": "^0.3.10",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -80,6 +80,7 @@
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "supertest": "^6.1.3",
