--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "helmet": "^6.0.0",
     "joi": "^17.4.2",
     "lodash.merge": "^4.6.2",
-    "mongodb": "^3.7.0",
+    "mongodb": "^4.12.0",
+    "nestjs-form-data": "^1.8.3",
     "nestjs-s3": "^1.0.1",
     "nodemailer": "^6.8.0",
     "passport": "^0.5.0",
